--- a/VeloMax/packages.config
+++ b/VeloMax/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Caliburn.Micro.Core" version="4.0.173" targetFramework="net472" />
+  <package id="MicrosoftExpressionInteractions" version="3.0.40218.0" targetFramework="net472" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net472" />
 </packages>
