--- a/VeloMax/VeloMax.csproj
+++ b/VeloMax/VeloMax.csproj
@@ -104,6 +104,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="BikePartWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -111,6 +115,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="BikePartWindow.xaml.cs">
+      <DependentUpon>BikePartWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Core\DataBase.cs" />
     <Compile Include="Core\Customer.cs" />
@@ -174,11 +181,13 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MVVM\ViewModel\BikePartsViewModel.cs" />
     <Compile Include="MVVM\ViewModel\BikeViewModel.cs" />
     <Compile Include="MVVM\ViewModel\CustomerViewModel.cs" />
     <Compile Include="MVVM\ViewModel\HomeViewModel.cs" />
     <Compile Include="MVVM\ViewModel\MainViewModel.cs" />
     <Compile Include="MVVM\ViewModel\OrderViewModel.cs" />
+    <Compile Include="MVVM\ViewModel\BPViewModel.cs" />
     <Compile Include="MVVM\ViewModel\PartViewModel.cs" />
     <Compile Include="MVVM\ViewModel\SupplierViewModel.cs" />
     <Compile Include="MVVM\View\BikeView.xaml.cs">
